test/Harper/Tests/Good/issue007_lam3.har
fun :: Integer -> Integer -> Integer -> Integer -> Integer;
fun x y = {
  (x :: Integer) = x * y;
  return (\(n :: Integer) (y :: Integer) => x + n + y);
};

main :: Integer;
main = fun 7 13 17 42;