test/Harper/Tests/Bad/UndeclaredIdentifier.har
fun :: Integer -> Integer;
fun n = {
    (x :: Integer) = n;
    y += 1;
    return x;
};

main :: Integer;
main = fun 42;